@@ -208,7 +208,6 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::downloader::protocols::https::methods", vector< string > { "curl", "wget" } },
 		{ "cupt::downloader::protocols::http::methods", vector< string > { "curl", "wget" } },
 		{ "cupt::downloader::protocols::ftp::methods", vector< string > { "curl", "wget" } },
-		{ "cupt::resolver::synchronize-source-versions::exceptions", vector< string > { "db", "linux-\\d.\\d" } },
 	};
 }
 
